# deep-symbolic-regression

./: .gitignore  README.md  architecture.py  changements.md  config.py  environment.py  evaluator.py  explication.md  main.py  pyproject.toml  random_search.py  requirements.txt  results_pmlb_feynman_all_20260324_235952.csv  test_env.py  test_evaluator.py  visualizer.py
results/: analyse_results.py  benchmark_results.csv  nguyen_benchmark_results.csv  results_pmlb_feynman_all_20260325_073041.csv  results_pmlb_feynman_all_50000.csv  visualize.py
src/dsr/: config.py
src/dsr/analysis/: memory.py  qualitative_analysis.py  visualizer.py
src/dsr/baselines/: baseline_gplearn.py  beam_search.py  random_search.py
src/dsr/benchmarks/: datasets.py
src/dsr/core/: config.py  env.py  evaluator.py  expression.py  factory.py  grammar.py  mdl_reward.py
src/dsr/data/: datasets.py  feynman_ground_truth.py
src/dsr/models/: policy.py
src/dsr/scripts/: benchmark_suite.py  compare_rl_vs_random.py  decode_with_beam.py  run_optuna.py  run_random_search.py  (+3 more)
src/results/: ablation_20260409_001422.csv  ablation_20260409_022400.csv  ablation_contributions_20260409_031433.csv  ablation_mdl_20260409_172325.csv  beam_search_20260409_035352.csv  gplearn_comparison_20260408_203956.csv  mcts_20260409_035415.csv  optimizer_comparison_20260408_203000.csv  optimizer_comparison_20260408_224415.csv  qualitative_analysis_20260409_025215.csv  qualitative_analysis_20260409_025317.csv  true_vs_recovered_20260407_005121.csv  true_vs_recovered_20260407_010743.csv  true_vs_recovered_20260407_051319.csv
(+19 files in other folders)
