[project]
name = "deep-symbolic-regression"
version = "0.1.0"
description = "Deep Symbolic Regression with Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "optuna"
]